[package]
name = "kamin_miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
lazy_static = "1.4.0"
rayon = "1.7.0"
regex = "1.6.0"
reqwest = { version = "0.11.12" , features = ["blocking", "json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_xml = "0.9.1"
